<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:background="@drawable/home"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:background="#800A610E"
        android:text="@string/text1"
        android:textColor="@color/white"
        android:textSize="25dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="30dp"
        android:gravity="center"
        android:layout_marginRight="30dp"
        android:background="#800A610E"
        android:text="@string/text2"
        android:textColor="@color/white"
        android:textSize="20dp"

    />



    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="150dp"
        android:layout_marginRight="30dp"
        android:background="#8043A047"
        android:text="@string/button1"
        android:textStyle="italic" >

    </Button>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginRight="30dp"
        android:background="#8072E678"
        android:text="@string/button2"
        android:textStyle="italic" >

    </Button>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginRight="30dp"
        android:background="#8072E678"
        android:text="@string/button3"
        android:textStyle="italic"/>
</LinearLayout>